--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.29.1
 idna==3.10
+imageio==2.37.0
 intervaltree==3.1.0
 ipykernel==6.26.0
 ipython==8.17.2
